--- a/Library2/src/main/resources/application.properties
+++ b/Library2/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=arda008000@gmail.com
+spring.mail.password=mdhr zlwp fgot nwfd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
